<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">quantity</string>
    <string name="_0">0</string>
    <string name="price">Order Summary</string>
    <string name="_0_">Name: \nQuantity: 0 \nCream: \nChocolate: \nPrice: $0</string>
    <string name="order">Order</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="toppings">Toppings</string>
    <string name="cream">Whipped Cream</string>
    <string name="choco">Chocolate</string>

    <string name="name">Name</string>
</resources>
